--- a/tutorial/access_viligance_bulletin.ipynb
+++ b/tutorial/access_viligance_bulletin.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7fb27b941602401d91542211134fc71a",
    "metadata": {},
    "source": [
     "# Vigilance Bulletin\n",
@@ -19,16 +20,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "acae54e37e7d407bbb7b55eff062a284",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "import pandas as pd\n",
+    "\n",
     "from meteole import Vigilance"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "9a63283cbaf04dbcab1f6479b197f3a8",
    "metadata": {},
    "source": [
     "# Init Vigilance Class"
@@ -36,6 +41,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8dd0d8092fe74a7c96281538738b07e2",
    "metadata": {},
    "source": [
     "**Requirements notice** : TODO Link to the documentation to have application_id"
@@ -44,11 +50,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "72eea5119410473aa328ad9291626812",
    "metadata": {},
    "outputs": [],
    "source": [
     "# load application_id from .env\n",
     "from dotenv import load_dotenv\n",
+    "\n",
     "load_dotenv()\n",
     "application_id = os.getenv(\"APPLICATION_ID\", None)"
    ]
@@ -56,14 +64,16 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "8edb47106e1a46a883d545849b8ab81b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Vigilance(application_id = application_id)"
+    "client = Vigilance(application_id=application_id)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "10185d26023b46108eb7d9f57d49d2b3",
    "metadata": {},
    "source": [
     "# Collect Forecasted phenomenon\n",
@@ -74,6 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "8763a12b2bbd4a93a75aff182afb95dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,6 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "7623eae2785240b9bd12b16a66d81610",
    "metadata": {},
    "outputs": [
     {
@@ -193,6 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "7cdc8c89c7104fffa095e18ddfef8986",
    "metadata": {},
    "outputs": [
     {
@@ -289,6 +302,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b118ea5561624da68c537baed56e602f",
    "metadata": {},
    "source": [
     "# Collect text of monitoring bulletins\n",
@@ -299,6 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "938c804e27f84196a10c8828c723f798",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,6 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "504fb2a444614c0babb325280ed9130a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,6 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "59bbdb311c014d738909a11f9e486628",
    "metadata": {},
    "outputs": [
     {
@@ -401,15 +418,17 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "b43b363d81ae4b689946ece5c682cd59",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_text_bloc_items = pd.json_normalize(test_texte['product.text_bloc_items'].explode())"
+    "df_text_bloc_items = pd.json_normalize(test_texte[\"product.text_bloc_items\"].explode())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "8a65eabff63a45729fe45fb5ade58bdc",
    "metadata": {},
    "outputs": [
     {
@@ -574,6 +593,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c3933fab20d04ec698c2621248eb3be0",
    "metadata": {},
    "source": [
     "# Map display"
@@ -582,6 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "4dd4641cc4064e0191573fe9c69df29b",
    "metadata": {},
    "outputs": [
     {
@@ -602,6 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8309879909854d7188b41380fd92a7c3",
    "metadata": {},
    "outputs": [],
    "source": []
