chore: refactoring (wip)
Signed-off-by: develop-cs <43383361+develop-cs@users.noreply.github.com>

--- a/tutorial/access_vigilance_bulletin.ipynb
+++ b/tutorial/access_vigilance_bulletin.ipynb
@@ -24,8 +24,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import os\n",
-        "\n",
         "import pandas as pd\n",
         "\n",
         "from meteole import Vigilance"
@@ -54,11 +52,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# load application_id from .env\n",
-        "from dotenv import load_dotenv\n",
-        "\n",
-        "load_dotenv()\n",
-        "application_id = os.getenv(\"APPLICATION_ID\", None)"
+        "APP_ID = \"<TO-BE-SET>\""
       ]
     },
     {
@@ -68,7 +62,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "client = Vigilance(application_id=application_id)"
+        "client = Vigilance(application_id=APP_ID)"
       ]
     },
     {
