--- a/tutorial/arome.ipynb
+++ b/tutorial/arome.ipynb
@@ -13,16 +13,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import os\n",
         "import random\n",
-        "\n",
-        "import dotenv\n",
         "\n",
         "from meteole import AromeForecast\n",
         "\n",
-        "dotenv.load_dotenv()\n",
-        "\n",
-        "application_id = os.getenv(\"APPLICATION_ID\")"
+        "APP_ID = \"<TO-BE-SET>\""
       ]
     },
     {
@@ -32,7 +27,7 @@
       "outputs": [],
       "source": [
         "# init client\n",
-        "arome = AromeForecast(application_id=application_id)"
+        "arome = AromeForecast(application_id=APP_ID)"
       ]
     },
     {
@@ -42,7 +37,6 @@
       "outputs": [],
       "source": [
         "# pick a random indicator\n",
-        "\n",
         "random_indicator = random.choice(arome.indicators)\n",
         "print(f\"Indicator: {random_indicator}\")"
       ]
