docs: update notebooks
Signed-off-by: develop-cs <43383361+develop-cs@users.noreply.github.com>

--- a/tutorial/arome.ipynb
+++ b/tutorial/arome.ipynb
@@ -27,7 +27,7 @@
       "outputs": [],
       "source": [
         "# init client\n",
-        "arome = AromeForecast(application_id=APP_ID)"
+        "arome_model = AromeForecast(application_id=APP_ID)"
       ]
     },
     {
@@ -37,7 +37,7 @@
       "outputs": [],
       "source": [
         "# pick a random indicator\n",
-        "random_indicator = random.choice(arome.indicators)\n",
+        "random_indicator = random.choice(arome_model.INDICATORS)\n",
         "print(f\"Indicator: {random_indicator}\")"
       ]
     },
@@ -48,7 +48,7 @@
       "outputs": [],
       "source": [
         "# fetch data using default computed params\n",
-        "arome.get_coverage(random_indicator)"
+        "arome_model.get_coverage(random_indicator)"
       ]
     }
   ],
