--- a/tutorial/arpege.ipynb
+++ b/tutorial/arpege.ipynb
@@ -27,7 +27,7 @@
       "outputs": [],
       "source": [
         "# init client\n",
-        "arpege = ArpegeForecast(application_id=APP_ID)"
+        "arpege_model = ArpegeForecast(application_id=APP_ID)"
       ]
     },
     {
@@ -38,7 +38,7 @@
       "source": [
         "# pick a random indicator\n",
         "\n",
-        "random_indicator = random.choice(arpege.indicators)\n",
+        "random_indicator = random.choice(arpege_model.INDICATORS)\n",
         "print(f\"Indicator: {random_indicator}\")"
       ]
     },
@@ -49,7 +49,7 @@
       "outputs": [],
       "source": [
         "# fetch data using default computed params\n",
-        "arpege.get_coverage(\"VERTICAL_VELOCITY_PRESSURE__ISOBARIC_SURFACE\")"
+        "arpege_model.get_coverage(\"VERTICAL_VELOCITY_PRESSURE__ISOBARIC_SURFACE\")"
       ]
     },
     {
