--- a/tutorial/vigilance.ipynb
+++ b/tutorial/vigilance.ipynb
@@ -62,7 +62,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "client = Vigilance(application_id=APP_ID)"
+        "vigi = Vigilance(application_id=APP_ID)"
       ]
     },
     {
@@ -82,7 +82,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "df_phenomenon, df_timelaps = client.get_phenomenon()"
+        "df_phenomenon, df_timelaps = vigi.get_phenomenon()"
       ]
     },
     {
@@ -122,7 +122,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "vigilance_bulletin = client.get_vigilance_bulletin()"
+        "vigilance_bulletin = vigi.get_bulletin()"
       ]
     },
     {
@@ -170,7 +170,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "client.get_vignette()"
+        "vigi.get_vignette()"
       ]
     }
   ],
