Fix: allow interval='' and interval=None

--- a/tutorial/Fetch_forecast_for_multiple_indicators.ipynb
+++ b/tutorial/Fetch_forecast_for_multiple_indicators.ipynb
@@ -23,8 +23,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from meteole import ArpegeForecast\n",
-    "import random"
+    "import random\n",
+    "\n",
+    "from meteole import ArpegeForecast"
    ]
   },
   {
@@ -103,9 +104,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_combined = client.get_combined_coverage(indicator_names=random_indicators,\n",
-    "                                    runs=[run],                                    \n",
-    "                                          )"
+    "df_combined = client.get_combined_coverage(\n",
+    "    indicator_names=random_indicators,\n",
+    "    runs=[run],\n",
+    ")"
    ]
   },
   {
@@ -157,10 +159,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_combined = client.get_combined_coverage(indicator_names=random_indicators,\n",
-    "                                    runs=[run],                                    \n",
-    "                                    intervals=intervals_list,\n",
-    "                                          )"
+    "df_combined = client.get_combined_coverage(\n",
+    "    indicator_names=random_indicators,\n",
+    "    runs=[run],\n",
+    "    intervals=intervals_list,\n",
+    ")"
    ]
   },
   {
@@ -187,12 +190,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#if you don't know common forecast_horizons between list of indicators, we can pick 2 common forecast_horizons like that\n",
+    "# if you don't know common forecast_horizons between list of indicators, we can pick 2 common forecast_horizons like that\n",
     "if intervals_list:\n",
-    "    intervals_list = [None if interval == '' else interval for interval in intervals_list]\n",
-    "list_coverage_id = [client._get_coverage_id(indicator, run, interval) for indicator, interval in zip(random_indicators, intervals_list)]\n",
+    "    intervals_list = [None if interval == \"\" else interval for interval in intervals_list]\n",
+    "list_coverage_id = [\n",
+    "    client._get_coverage_id(indicator, run, interval) for indicator, interval in zip(random_indicators, intervals_list)\n",
+    "]\n",
     "forecast_horizons = client.find_common_forecast_horizons(list_coverage_id)[:2]\n",
-    "print(forecast_horizons)\n"
+    "print(forecast_horizons)"
    ]
   },
   {
@@ -201,11 +206,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_combined = client.get_combined_coverage(indicator_names=random_indicators,\n",
-    "                                    runs=[run],                                    \n",
-    "                                    intervals=intervals_list,\n",
-    "                                    forecast_horizons = forecast_horizons,\n",
-    "                                          )"
+    "df_combined = client.get_combined_coverage(\n",
+    "    indicator_names=random_indicators,\n",
+    "    runs=[run],\n",
+    "    intervals=intervals_list,\n",
+    "    forecast_horizons=forecast_horizons,\n",
+    ")"
    ]
   },
   {
@@ -232,14 +238,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#To get heights, we can use `self.get_coverage_description` and pick a random height if height exist for the indicator\n",
+    "# To get heights, we can use `self.get_coverage_description` and pick a random height if height exist for the indicator\n",
     "heights = []\n",
     "for indicator, interval in zip(random_indicators, intervals_list):\n",
     "    coverage_id = client._get_coverage_id(indicator, run, interval)\n",
     "    description = client.get_coverage_description(coverage_id)\n",
-    "    \n",
+    "\n",
     "    # Get a random height if heights exist for the indicator\n",
-    "    possible_heights = description.get('heights', [])\n",
+    "    possible_heights = description.get(\"heights\", [])\n",
     "    if possible_heights:\n",
     "        random_height = random.choice(possible_heights)\n",
     "        heights.append(random_height)\n",
@@ -255,12 +261,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_combined = client.get_combined_coverage(indicator_names=random_indicators,\n",
-    "                                    runs=[run],                                    \n",
-    "                                    intervals=intervals_list,\n",
-    "                                    forecast_horizons = forecast_horizons,\n",
-    "                                    heights = heights,\n",
-    "                                          )\n"
+    "df_combined = client.get_combined_coverage(\n",
+    "    indicator_names=random_indicators,\n",
+    "    runs=[run],\n",
+    "    intervals=intervals_list,\n",
+    "    forecast_horizons=forecast_horizons,\n",
+    "    heights=heights,\n",
+    ")"
    ]
   },
   {
@@ -297,7 +304,7 @@
    "outputs": [],
    "source": [
     "capabilities = client.capabilities[client.capabilities[\"indicator\"] == random_indicators[0]]\n",
-    "runs = capabilities['run'].unique()[:2].tolist()\n",
+    "runs = capabilities[\"run\"].unique()[:2].tolist()\n",
     "\n",
     "print(runs)"
    ]
@@ -308,12 +315,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_combined = client.get_combined_coverage(indicator_names=random_indicators,\n",
-    "                                    runs=runs,                                    \n",
-    "                                    intervals=intervals_list,\n",
-    "                                    forecast_horizons = forecast_horizons,\n",
-    "                                    heights = heights,\n",
-    "                                          )"
+    "df_combined = client.get_combined_coverage(\n",
+    "    indicator_names=random_indicators,\n",
+    "    runs=runs,\n",
+    "    intervals=intervals_list,\n",
+    "    forecast_horizons=forecast_horizons,\n",
+    "    heights=heights,\n",
+    ")"
    ]
   },
   {
@@ -328,9 +336,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "inondation",
+   "display_name": "meteole_env",
    "language": "python",
-   "name": "inondation"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -342,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "undefined.undefined.undefined"
   },
   "toc": {
    "base_numbering": 1,
