--- a/tutorial/Fetch_forecasts.ipynb
+++ b/tutorial/Fetch_forecasts.ipynb
@@ -23,6 +23,7 @@
    "outputs": [],
    "source": [
     "import random\n",
+    "\n",
     "from meteole import AromeForecast"
    ]
   },
@@ -112,12 +113,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#First parameters to create a coverage_id (run and interval)\n",
+    "# First parameters to create a coverage_id (run and interval)\n",
     "df_capabilities = arome.get_capabilities()\n",
     "\n",
-    "list_run_valid = list(df_capabilities[df_capabilities['indicator']==random_indicator]['run'].unique())\n",
-    "list_interval_valid = list(df_capabilities[df_capabilities['indicator']==random_indicator]['interval'].unique())\n",
-    "list_coverage_id_valid = list(df_capabilities[df_capabilities['indicator']==random_indicator]['id'].unique())\n"
+    "list_run_valid = list(df_capabilities[df_capabilities[\"indicator\"] == random_indicator][\"run\"].unique())\n",
+    "list_interval_valid = list(df_capabilities[df_capabilities[\"indicator\"] == random_indicator][\"interval\"].unique())\n",
+    "list_coverage_id_valid = list(df_capabilities[df_capabilities[\"indicator\"] == random_indicator][\"id\"].unique())"
    ]
   },
   {
@@ -126,13 +127,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Then other parameters from a coverage_id\n",
+    "# Then other parameters from a coverage_id\n",
     "description = arome.get_coverage_description(list_coverage_id_valid[0])\n",
     "\n",
-    "list_forecast_horizons_valid = description.get('forecast_horizons', [])\n",
-    "list_height_valid = description.get('heights', [])\n",
-    "list_pressure_id_valid = description.get('pressures', [])\n",
-    "\n"
+    "list_forecast_horizons_valid = description.get(\"forecast_horizons\", [])\n",
+    "list_height_valid = description.get(\"heights\", [])\n",
+    "list_pressure_id_valid = description.get(\"pressures\", [])"
    ]
   },
   {
