--- a/tutorial/Fetch_forecasts.ipynb
+++ b/tutorial/Fetch_forecasts.ipynb
@@ -69,7 +69,7 @@
    "outputs": [],
    "source": [
     "# pick a random indicator\n",
-    "random_indicator = random.choice(arome.indicators)\n",
+    "random_indicator = random.choice(arome.INDICATORS)\n",
     "print(f\"Indicator: {random_indicator}\")"
    ]
   },
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arome.indicators"
+    "arome.INDICATORS"
    ]
   },
   {
@@ -145,9 +145,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "inondation",
+   "display_name": "meteole_env",
    "language": "python",
-   "name": "inondation"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -159,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "undefined.undefined.undefined"
   },
   "toc": {
    "base_numbering": 1,
