--- a/tutorial/Fetch_forecast_for_multiple_indicators.ipynb
+++ b/tutorial/Fetch_forecast_for_multiple_indicators.ipynb
@@ -29,6 +29,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "\n",
+    "logging.basicConfig(level=logging.INFO)\n",
+    "logger = logging.getLogger(\"meteole\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -88,12 +100,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We have to specified a run, to select the latest run\n",
     "if not hasattr(client, \"capabilities\"):\n",
     "    client.get_capabilities()\n",
     "\n",
     "capabilities = client.capabilities[client.capabilities[\"indicator\"] == random_indicators[0]]\n",
-    "run = capabilities.iloc[0][\"run\"]\n",
+    "run = capabilities.run.max()\n",
     "\n",
     "print(run)"
    ]
