Add tutorial for PIAF forecasts

--- a/tutorial/Fetch_AROME_forecasts.ipynb
+++ b/tutorial/Fetch_AROME_forecasts.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "APP_ID = \"<TO-BE-SET>\""
+    "APP_ID = \"<TO BE SET>\""
    ]
   },
   {
@@ -61,7 +61,7 @@
    "source": [
     "## Init Client Arome\n",
     "\n",
-    "To get Arpege Forecast, import `ArpegeForecast`"
+    "To get Arome Forecast, import `AromeForecast`"
    ]
   },
   {
@@ -171,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.11.11"
   },
   "toc": {
    "base_numbering": 1,
