--- a/tutorial/Fetch_forecast_for_multiple_indicators.ipynb
+++ b/tutorial/Fetch_forecast_for_multiple_indicators.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "import random\n",
     "\n",
-    "from meteole import ArpegeForecast"
+    "from meteole import ArpegeForecast  # or AromeForecast, AromePIForecast"
    ]
   },
   {
@@ -60,9 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Init Client Arpege\n",
-    "\n",
-    "To get Arome Forecast, import `AromeForecast`"
+    "## Init Client"
    ]
   },
   {
@@ -71,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = ArpegeForecast(application_id=APP_ID)"
+    "client = ArpegeForecast(application_id=APP_ID)  # or AromeForecast, AromePIForecast"
    ]
   },
   {
