Changed INDICATORS and INSTANT_INDICATORS to properties #54.

--- a/tutorial/Fetch_forecasts.ipynb
+++ b/tutorial/Fetch_forecasts.ipynb
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "# pick a random indicator\n",
-    "random_indicator = random.choice(client.INDICATORS)\n",
+    "random_indicator = random.choice(client.indicators)\n",
     "print(f\"Indicator: {random_indicator}\")"
    ]
   },
@@ -89,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.INDICATORS"
+    "client.indicators"
    ]
   },
   {
