--- a/tutorial/Fetch_forecasts_ensemble.ipynb
+++ b/tutorial/Fetch_forecasts_ensemble.ipynb
@@ -84,7 +84,7 @@
    "outputs": [],
    "source": [
     "# Available indicators for AROME\n",
-    "arome_client.INDICATORS"
+    "arome_client.indicators"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "outputs": [],
    "source": [
     "# Available indicators for PEAROME\n",
-    "pearome_client.INDICATORS"
+    "pearome_client.indicators"
    ]
   },
   {
