Adjustements to documentation.

--- a/tutorial/Fetch_forecasts.ipynb
+++ b/tutorial/Fetch_forecasts.ipynb
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### fetch data using default computed params"
+    "### Fetch data using default computed params"
    ]
   },
   {
@@ -106,6 +106,28 @@
    "outputs": [],
    "source": [
     "client.get_coverage(random_indicator)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fetch data for a custom location"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The default parameters fetch data for metropolitan France\n",
+    "# You can specify a custom location using latitude and longitude, either as tuples (min, max) or as single values for a specific location\n",
+    "# A combination also works (e.g. a tuple for latitude and a single value for longitude)\n",
+    "# Coordinates get rounded to the nearest grid point\n",
+    "client.get_coverage(random_indicator, lat=48.8566, long=2.3522)\n",
+    "\n",
+    "client.get_coverage(random_indicator, lat=(45, 50), long=(2, 3))"
    ]
   },
   {
